--- a/.devetek/flask-example.yaml
+++ b/.devetek/flask-example.yaml
@@ -13,8 +13,8 @@ build:
         - name: "Build Flask Example"
           command:
             - python -m venv .venv
-            - . .venv/bin/activate
-            - pip install -r requirements.txt 
+            # create venv and install dependencies in one session
+            - . .venv/bin/activate && pip install -r requirements.txt 
 
 run:
   name: flask-example
