--- a/.devetek/flask-example.yaml
+++ b/.devetek/flask-example.yaml
@@ -20,6 +20,11 @@ run:
   name: flask-example
   description: Python Flask Example
   command: uwsgi --http 127.0.0.1:${PORT} --master -p 4 -w main:app
+  config:
+    - key: KillSignal
+      value: SIGQUIT
+    - key: Type
+      value: notify
   port: 5000
   environment:
     - key: PORT
